--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
               - Home: guides/flux/index.md
         - Docker: 
               - Home: guides/docker/index.md
+              - Radiant-Node: guides/docker/radiant-node-guide.md
         - Radiant:              
               - Mining Solo: guides/mining/index.md
               - Compile Node: guides/node/compile/index.md
