--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
       - index: tech/index.md
       - Whitepaper: 
         - English: tech/whitepaper/index.md
+        - Hindi: tech/whitepaper/india.md
         - Indonesia: tech/whitepaper/indonesia.md
         - Spanish: tech/whitepaper/spanish.md     
         - Chinese: tech/whitepaper/chinese.md
