--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
         - English: tech/whitepaper/index.md
         - French: tech/whitepaper/french.md
         - Hindi: tech/whitepaper/india.md
+        - Javanese: tech/whitepaper/javanese.md
         - Indonesia: tech/whitepaper/indonesia.md
         - Spanish: tech/whitepaper/spanish.md     
         - Chinese: tech/whitepaper/chinese.md
